# mailroom

./: .gitignore  CLAUDE.md  MANIFEST.in  README.md  courier.spec  mailroom.spec  pyproject.toml
courier/: __main__.py  _claude_command.py  app_password.py  auth_setup.py  browser_auth.py  config.py  gmail_auth.py  identity.py  imap_client.py  local_cache.py  logging_setup.py  markdown_render.py  mcp_protocol.py  mcp_server.py  models.py  oauth2.py  oauth2_config.py  query_parser.py  resources.py  sieve_filter.py  smtp_client.py  smtp_transport.py  tools.py
courier/workflows/: __init__.py  calendar_mock.py  invite_parser.py  meeting_reply.py
debian/: changelog  control  copyright  courier.1  courier.manpages
debian/examples/: claude-code-mcp.json  config.toml
docs/: COMMIT_CONVENTIONS.md  COMPLEX_SEARCH_IMPLEMENTATION.md  CONFIGURATION.md  GMAIL_SETUP.md  INSTALLATION.md  LOCAL_CACHE.md
examples/: config.sample.toml  link_extraction_example.py  test_search_parser.py  work-only.sieve
formula/: mailroom.rb
mailroom/: __init__.py  __main__.py  _claude_command.py  config.py  imap_client.py  local_cache.py  resources.py  sieve_filter.py  smtp_client.py  tools.py
mailroom/data/: claude-command-failure-modes.md  claude-command.md
research/: competitive-landscape.md  use-case-survey.md  usp-ranking.md  voices.md
scripts/: run_checks.sh  run_mcp_cli_tests.sh
tests/: conftest.py  test_app_password.py  test_browser_auth.py  test_chain.py  test_cli_send.py  test_config.py  test_copy.py  test_gmail_auth.py  test_identity.py  test_imap_client.py  test_imap_client_drafts.py  test_imap_client_threading.py  test_infrastructure.py  test_install_claude_command.py  test_local_cache.py  test_markdown_render.py  test_models.py  test_oauth2_config.py  test_query_parser.py  test_resources.py  test_search_formatters.py  test_send_draft.py  test_server.py  test_sieve_filter.py  test_smtp_client_composition.py  test_smtp_transport.py  test_status_command.py  test_tools.py  test_tools_attachments.py  test_tools_compose.py  test_tools_html_export.py  test_tools_link_extraction.py  test_tools_orchestration.py  test_tools_read.py  test_tools_reply.py  test_tools_reply_drafting.py  test_trash.py  test_utils.py
tests/integration/: __init__.py  test_direct_tools.py  test_gmail_integration.py  test_local_cache.py  test_mcp_cli_integration.py  test_oauth2_gmail.py
tests/workflows/: test_calendar_mock.py  test_invite_parser.py  test_meeting_reply.py
