[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mailroom"
version = "1.1.15"
description = "Email toolkit for AI assistants and command-line scripting"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "Weiwu Zhang"}
]
keywords = ["email", "imap", "mcp", "ai", "cli", "gmail", "automation"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "imapclient>=3.0.0",
    "markdown-it-py>=3.0.0",
    "python-dotenv>=1.0.0",
    "requests>=2.32.0",
    "sievelib>=1.5",
    "typer>=0.15.0",
]

[project.optional-dependencies]
mcp = [
    "flask>=3.1.0",
    "mcp>=1.0.0",
]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=6.0.0",
    "pytest-asyncio>=0.25.0",
    "ruff>=0.11.0",
    "black>=23.0.0",
    "isort>=5.10.0",
    "mypy>=0.982",
    "pre-commit>=2.19.0",
]

[project.scripts]
mailroom = "mailroom.__main__:main"

[project.urls]
Homepage = "https://github.com/SmartLayer/mailroom"
Issues = "https://github.com/SmartLayer/mailroom/issues"
Author = "https://www.linkedin.com/in/weiwuzhang/"

[tool.setuptools.packages.find]
include = ["mailroom*"]

[tool.black]
line-length = 88
target-version = ["py311"]
include = '\.pyi?$'

[tool.isort]
profile = "black"
line_length = 88

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_functions = "test_*"
python_classes = "Test*"
markers = [
    "unit: Unit tests (default)",
    "integration: Integration tests requiring actual services",
    "gmail: Tests specific to Gmail integration",
    "oauth2: Tests using OAuth2 authentication",
    "app_password: Tests using app password authentication",
    "slow: Tests that take a long time to run",
    "script_test: Tests for scripts in the scripts directory",
]
log_cli = true
log_cli_level = "ERROR"
log_format = "%(asctime)s %(levelname)s %(message)s"
log_date_format = "%Y-%m-%d %H:%M:%S"
addopts = "-v"

[dependency-groups]
dev = [
    "types-requests>=2.33.0.20260402",
]
